--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development node server.js",
-    "build": "webpack -p",
-    "build-dev": "NODE_ENV=development webpack",
-    "build-prod": "NODE_ENV=production webpack -p"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
