--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "NODE_ENV=development node server.js",
     "build": "webpack -p",
     "build-dev": "NODE_ENV=development webpack",
-    "build-prod": "NODE_ENV=production webpack -p"
+    "build-prod": "NODE_ENV=production webpack -p --config webpack.prod.config.js"
   },
   "repository": {
     "type": "git",
